// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar View should be able to render a toolbar 1`] = `
<PureToolbar
  type="code"
>
  <div
    className="jsx-3494371011 cell-toolbar-mask"
  >
    <div
      className="jsx-3494371011 cell-toolbar"
    >
      <button
        className="jsx-3494371011 executeButton"
        title="execute cell"
      >
        <span
          className="jsx-3494371011 octicon"
        >
          <TriangleRightOcticon>
            <SVGWrapper
              height={16}
              outerProps={Object {}}
              viewBox="0 0 6 16"
              width={6}
            >
              <span>
                <svg
                  height={16}
                  style={
                    Object {
                      "display": "inline-block",
                      "fill": "currentColor",
                      "verticalAlign": "text-bottom",
                    }
                  }
                  viewBox="0 0 6 16"
                  width={6}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Run Cell
                  </title>
                  <path
                    d="M0 14l6-6-6-6z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </SVGWrapper>
          </TriangleRightOcticon>
        </span>
      </button>
      <DropdownMenu>
        <div
          className="jsx-3444321073 dropdown"
        >
          <DropdownTrigger
            key=".0"
            onClick={[Function]}
          >
            <div
              className="jsx-3273030785"
              onClick={[Function]}
            >
              <button
                className="jsx-3494371011"
                title="show additional actions"
              >
                <span
                  className="jsx-3494371011 octicon toggle-menu"
                >
                  <ChevronDownOcticon>
                    <SVGWrapper
                      height={16}
                      outerProps={Object {}}
                      viewBox="0 0 10 16"
                      width={10}
                    >
                      <span>
                        <svg
                          height={16}
                          style={
                            Object {
                              "display": "inline-block",
                              "fill": "currentColor",
                              "verticalAlign": "text-bottom",
                            }
                          }
                          viewBox="0 0 10 16"
                          width={10}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            Show Additional Actions
                          </title>
                          <path
                            d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </SVGWrapper>
                  </ChevronDownOcticon>
                </span>
              </button>
              <JSXStyle
                css="div.jsx-3273030785{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;margin:0px;padding:0px;}"
                styleId="3273030785"
              />
            </div>
          </DropdownTrigger>
          <JSXStyle
            css=".dropdown.jsx-3444321073{z-index:10000;display:inline-block;}"
            styleId="3444321073"
          />
        </div>
      </DropdownMenu>
      <span
        className="jsx-3494371011 spacer"
      />
      <button
        className="jsx-3494371011 deleteButton"
        title="delete cell"
      >
        <span
          className="jsx-3494371011 octicon"
        >
          <TrashOcticon>
            <SVGWrapper
              height={16}
              outerProps={Object {}}
              viewBox="0 0 12 16"
              width={12}
            >
              <span>
                <svg
                  height={16}
                  style={
                    Object {
                      "display": "inline-block",
                      "fill": "currentColor",
                      "verticalAlign": "text-bottom",
                    }
                  }
                  viewBox="0 0 12 16"
                  width={12}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Delete Cell
                  </title>
                  <path
                    d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </SVGWrapper>
          </TrashOcticon>
        </span>
      </button>
    </div>
    <JSXStyle
      css=".cell-toolbar.__jsx-style-dynamic-selector>div.__jsx-style-dynamic-selector{display:inline-block;}.cell-toolbar.__jsx-style-dynamic-selector{background-color:var(--theme-cell-toolbar-bg);opacity:0.4;-webkit-transition:opacity 0.4s;transition:opacity 0.4s;}.cell-toolbar.__jsx-style-dynamic-selector:hover{opacity:1;}.cell-toolbar.__jsx-style-dynamic-selector button.__jsx-style-dynamic-selector{display:inline-block;width:22px;height:20px;padding:0px 4px;text-align:center;border:none;outline:none;background:none;}.cell-toolbar.__jsx-style-dynamic-selector span.__jsx-style-dynamic-selector{font-size:15px;line-height:1;color:var(--theme-cell-toolbar-fg);}.cell-toolbar.__jsx-style-dynamic-selector button.__jsx-style-dynamic-selector span.__jsx-style-dynamic-selector:hover{color:var(--theme-cell-toolbar-fg-hover);}.cell-toolbar-mask.__jsx-style-dynamic-selector{z-index:9999;display:none;position:absolute;top:0px;right:0px;height:34px;padding:0px 0px 0px 50px;}.octicon.__jsx-style-dynamic-selector{-webkit-transition:color 0.5s;transition:color 0.5s;}.cell-toolbar.__jsx-style-dynamic-selector span.spacer.__jsx-style-dynamic-selector{display:inline-block;vertical-align:middle;margin:1px 5px 3px 5px;height:11px;}"
      dynamic={
        Array [
          "none",
        ]
      }
      styleId="3732053222"
    />
  </div>
</PureToolbar>
`;

exports[`Toolbar View should be able to render a toolbar 2`] = `
<PureToolbar
  type="code"
>
  <div
    className="jsx-3494371011 cell-toolbar-mask"
  >
    <div
      className="jsx-3494371011 cell-toolbar"
    >
      <button
        className="jsx-3494371011 executeButton"
        title="execute cell"
      >
        <span
          className="jsx-3494371011 octicon"
        >
          <TriangleRightOcticon>
            <SVGWrapper
              height={16}
              outerProps={Object {}}
              viewBox="0 0 6 16"
              width={6}
            >
              <span>
                <svg
                  height={16}
                  style={
                    Object {
                      "display": "inline-block",
                      "fill": "currentColor",
                      "verticalAlign": "text-bottom",
                    }
                  }
                  viewBox="0 0 6 16"
                  width={6}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Run Cell
                  </title>
                  <path
                    d="M0 14l6-6-6-6z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </SVGWrapper>
          </TriangleRightOcticon>
        </span>
      </button>
      <DropdownMenu>
        <div
          className="jsx-3444321073 dropdown"
        >
          <DropdownTrigger
            key=".0"
            onClick={[Function]}
          >
            <div
              className="jsx-3273030785"
              onClick={[Function]}
            >
              <button
                className="jsx-3494371011"
                title="show additional actions"
              >
                <span
                  className="jsx-3494371011 octicon toggle-menu"
                >
                  <ChevronDownOcticon>
                    <SVGWrapper
                      height={16}
                      outerProps={Object {}}
                      viewBox="0 0 10 16"
                      width={10}
                    >
                      <span>
                        <svg
                          height={16}
                          style={
                            Object {
                              "display": "inline-block",
                              "fill": "currentColor",
                              "verticalAlign": "text-bottom",
                            }
                          }
                          viewBox="0 0 10 16"
                          width={10}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            Show Additional Actions
                          </title>
                          <path
                            d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </SVGWrapper>
                  </ChevronDownOcticon>
                </span>
              </button>
              <JSXStyle
                css="div.jsx-3273030785{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;margin:0px;padding:0px;}"
                styleId="3273030785"
              />
            </div>
          </DropdownTrigger>
          <DropdownContent
            key=".1"
            onItemClick={[Function]}
          >
            <div
              className="jsx-19483498"
            >
              <ul
                className="jsx-19483498"
              >
                <li
                  aria-selected="false"
                  className="jsx-3494371011 clearOutput"
                  key=".0"
                  onClick={[Function]}
                  role="option"
                  tabIndex="0"
                >
                  <a
                    className="jsx-3494371011"
                  >
                    Clear Cell Output
                  </a>
                </li>
                <li
                  aria-selected="false"
                  className="jsx-3494371011 inputVisibility"
                  key=".1"
                  onClick={[Function]}
                  role="option"
                  tabIndex="0"
                >
                  <a
                    className="jsx-3494371011"
                  >
                    Toggle Input Visibility
                  </a>
                </li>
                <li
                  aria-selected="false"
                  className="jsx-3494371011 outputVisibility"
                  key=".2"
                  onClick={[Function]}
                  role="option"
                  tabIndex="0"
                >
                  <a
                    className="jsx-3494371011"
                  >
                    Toggle Output Visibility
                  </a>
                </li>
                <li
                  aria-selected="false"
                  className="jsx-3494371011 outputExpanded"
                  key=".3"
                  onClick={[Function]}
                  role="option"
                  tabIndex="0"
                >
                  <a
                    className="jsx-3494371011"
                  >
                    Toggle Expanded Output
                  </a>
                </li>
                <li
                  aria-selected="false"
                  className="jsx-3494371011"
                  key=".4"
                  onClick={[Function]}
                  role="option"
                  tabIndex="0"
                >
                  <a
                    className="jsx-3494371011"
                  >
                    Toggle Parameter Cell
                  </a>
                </li>
                <li
                  aria-selected="false"
                  className="jsx-3494371011 changeType"
                  key=".5"
                  onClick={[Function]}
                  role="option"
                  tabIndex="0"
                >
                  <a
                    className="jsx-3494371011"
                  >
                    Convert to Markdown Cell
                  </a>
                </li>
              </ul>
              <JSXStyle
                css="div.jsx-19483498{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;margin:0px;padding:0px;width:200px;opacity:1;position:absolute;top:0.2em;right:0;border-style:none;padding:0;font-family:var(--nt-font-family-normal);font-size:var(--nt-font-size-m);line-height:1.5;margin:20px 0;background-color:var(--theme-cell-menu-bg);}ul.jsx-19483498{list-style:none;text-align:left;padding:0;margin:0;opacity:1;}ul.jsx-19483498 li{padding:0.5rem;}ul.jsx-19483498 li:hover{background-color:var(--theme-cell-menu-bg-hover,#e2dfe3);cursor:pointer;}"
                styleId="19483498"
              />
            </div>
          </DropdownContent>
          <JSXStyle
            css=".dropdown.jsx-3444321073{z-index:10000;display:inline-block;}"
            styleId="3444321073"
          />
        </div>
      </DropdownMenu>
      <span
        className="jsx-3494371011 spacer"
      />
      <button
        className="jsx-3494371011 deleteButton"
        title="delete cell"
      >
        <span
          className="jsx-3494371011 octicon"
        >
          <TrashOcticon>
            <SVGWrapper
              height={16}
              outerProps={Object {}}
              viewBox="0 0 12 16"
              width={12}
            >
              <span>
                <svg
                  height={16}
                  style={
                    Object {
                      "display": "inline-block",
                      "fill": "currentColor",
                      "verticalAlign": "text-bottom",
                    }
                  }
                  viewBox="0 0 12 16"
                  width={12}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Delete Cell
                  </title>
                  <path
                    d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </SVGWrapper>
          </TrashOcticon>
        </span>
      </button>
    </div>
    <JSXStyle
      css=".cell-toolbar.__jsx-style-dynamic-selector>div.__jsx-style-dynamic-selector{display:inline-block;}.cell-toolbar.__jsx-style-dynamic-selector{background-color:var(--theme-cell-toolbar-bg);opacity:0.4;-webkit-transition:opacity 0.4s;transition:opacity 0.4s;}.cell-toolbar.__jsx-style-dynamic-selector:hover{opacity:1;}.cell-toolbar.__jsx-style-dynamic-selector button.__jsx-style-dynamic-selector{display:inline-block;width:22px;height:20px;padding:0px 4px;text-align:center;border:none;outline:none;background:none;}.cell-toolbar.__jsx-style-dynamic-selector span.__jsx-style-dynamic-selector{font-size:15px;line-height:1;color:var(--theme-cell-toolbar-fg);}.cell-toolbar.__jsx-style-dynamic-selector button.__jsx-style-dynamic-selector span.__jsx-style-dynamic-selector:hover{color:var(--theme-cell-toolbar-fg-hover);}.cell-toolbar-mask.__jsx-style-dynamic-selector{z-index:9999;display:none;position:absolute;top:0px;right:0px;height:34px;padding:0px 0px 0px 50px;}.octicon.__jsx-style-dynamic-selector{-webkit-transition:color 0.5s;transition:color 0.5s;}.cell-toolbar.__jsx-style-dynamic-selector span.spacer.__jsx-style-dynamic-selector{display:inline-block;vertical-align:middle;margin:1px 5px 3px 5px;height:11px;}"
      dynamic={
        Array [
          "none",
        ]
      }
      styleId="3732053222"
    />
  </div>
</PureToolbar>
`;
